--- a/Capstone_Project_Module_2.ipynb
+++ b/Capstone_Project_Module_2.ipynb
@@ -143,7 +143,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "https://github.com/langojuramya/Almabetter-Capstone-Projects/tree/main"
+      ],
       "metadata": {
         "id": "7HbwQD6iiV5d"
       }
@@ -2023,7 +2025,7 @@
       "source": [
         "Insights :\n",
         "\n",
-        "Based on the results of the scatter plot, we can conclude that there is a positive correlation between the price of an Airbnb listing and the number of reviews it has, even after removing outliers. This means that listings with more reviews tend to be more expensive. However, it is important to note that there are other factors that influence the price of Airbnb listings, such as the location of the listing, the amenities that it offers, and the time of year.Answer Here"
+        "Based on the results of the scatter plot, we can conclude that there is a positive correlation between the price of an Airbnb listing and the number of reviews it has, even after removing outliers. This means that listings with more reviews tend to be more expensive. However, it is important to note that there are other factors that influence the price of Airbnb listings, such as the location of the listing, the amenities that it offers, and the time of year."
       ],
       "metadata": {
         "id": "C_j1G7yiqdRP"
@@ -2297,7 +2299,7 @@
         "id": "kJJoWtRJ2am0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 753
+          "height": 892
         },
         "outputId": "0bc7c858-f7cb-480e-c53d-23cf515cac96"
       },
@@ -2466,7 +2468,7 @@
         "\n",
         "1. The top 10 hosts have a significant number of apartments, suggesting that the Airbnb market in NYC is dominated by a small number of large hosts.\n",
         "2.The largest host, Sonder (NYC), has over 327 apartments, which is more than 6 times the number of apartments of the smallest host in the top 10.\n",
-        "3.The top 10 hosts are all located in NYC, suggesting that the Airbnb market in NYC is more concentrated than in other cities.Answer Here"
+        "3.The top 10 hosts are all located in NYC, suggesting that the Airbnb market in NYC is more concentrated than in other cities."
       ],
       "metadata": {
         "id": "Xx8WAJvtYrdO"
@@ -2579,7 +2581,7 @@
         "\n",
         "3. Manhattan is the costliest location for every room type may be due to their location or high demand followed by Brooklyn .\n",
         "\n",
-        "4. The price for private-room rentals of Manhattan is somewhat in the same range of entire-home/apt rentals of other locations.Answer Here"
+        "4. The price for private-room rentals of Manhattan is somewhat in the same range of entire-home/apt rentals of other locations."
       ],
       "metadata": {
         "id": "uyqkiB8YYuh3"
@@ -2701,7 +2703,7 @@
         "\n",
         "1. Dona has most number of reviews followed by Jj.\n",
         "2. The reason behind the demand of top 20 hosts is due to their competitive pricing.\n",
-        "3. Almost every popular host have rental listings in the price range between 50 and 200.Answer Here"
+        "3. Almost every popular host have rental listings in the price range between 50 and 200."
       ],
       "metadata": {
         "id": "VECbqPI7phqN"
@@ -3958,7 +3960,7 @@
         "\n",
         "1. Busiest Host are: Dona , Jj , Maya , Carol\n",
         "\n",
-        "2. Private Rooms are most preferred.Answer Here"
+        "2. Private Rooms are most preferred."
       ],
       "metadata": {
         "id": "mZtgC_hjphqO"
@@ -4436,7 +4438,7 @@
         "\n",
         "3. If no. of reviews are more for particular neighbourhood that means it is a famous place\n",
         "\n",
-        "4. If people are not staying for more then 1 night that means they are travellers---they give reviewsAnswer Here"
+        "4. If people are not staying for more then 1 night that means they are travellers---they give reviews."
       ],
       "metadata": {
         "id": "ngGi97qjphqQ"
@@ -4522,7 +4524,7 @@
         "\n",
         "1. Seasonality has a significant impact on Airbnb bookings, with peak bookings occurring during the summer months and trough bookings occurring during the winter months.\n",
         "2. The impact of seasonality is consistent over time, with the same general pattern observed from 2012 to 2019.\n",
-        "3. The magnitude of the impact of seasonality varies depending on the specific location.Answer Here"
+        "3. The magnitude of the impact of seasonality varies depending on the specific location."
       ],
       "metadata": {
         "id": "Qp13pnNzphqQ"
